fix detailsButton icon alignment

--- a/apps/client/src/features/editor/styles/details.css
+++ b/apps/client/src/features/editor/styles/details.css
@@ -63,7 +63,11 @@
   [data-type="details"][open] > [data-type="detailsContainer"] > [data-type="detailsContent"]{
     display: block;
   }
-  
+
+  [data-type="details"][open] > [data-type="detailsButton"] {
+    align-items: start;
+  }
+
   [data-type="details"][open] > [data-type="detailsButton"] .ProseMirror-icon{
     transform: rotateZ(90deg);
   }
